--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "ng2-pdf-viewer": "^5.3.4",
     "router": "^1.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
