Update to work on work laptop

--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "JoshWeb"
+    }
+  },
+  "defaultProject": "JoshWeb",
+  "cli": {
+    "analytics": false
+  }
 }
